# simple_blog

./: .gitignore  pyproject.toml
simple_blog/src/django-project/project/settings/: _base.py
tests/: test_simple_blog.py
